--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-light" >
     <div class="container-fluid">
-      <img src="structures/imgs/logo.png" width="80" height="80"/>
+      <img src="logo.png" width="80" height="80"/>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -51,7 +51,7 @@
 
     <section id="history">
         <div>
-            <img src="structures/imgs/logo.png"
+            <img src="logo.png"
             style="float: left; margin-right: 10px; margin-bottom: 5px">
             <h2 style="font-weight: bold;"><br>Our History</h2>
             <p  style="text-align: justify; padding-right: 20px">
