--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <link rel="stylesheet" href="structures/css/styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-light" >
